# auth9

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  LICENSE  README-ja.md  README-zh.md  README.md  admin_auth9.token  auth9-threat-model.md  clickjack-test.html  docker-compose.conformance.yml  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.yml  filtered-list.md  gen_identity_token.js  gen_perfect_token.js  page-before-submit.md  race_test_password.py  race_test_tenant.py  search-results.md  setup_tokens.sh  test-esm-import.mjs  test-fastify-plugin.js  test-mock-token.js  test_security.sh  test_security_advanced.sh  token-exchange-test.js
auth9-core/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  build.rs  tarpaulin.toml  test_nodejs_require.rs
auth9-core/.cargo/: audit.toml
auth9-core/.claude/: PROJECT_RULES.md  README.md  api-test-status.md  api-tests-completion-summary.md  comprehensive-coverage-report.md  coverage-report.md  repository-coverage-analysis.md  role-api-test-fix-summary.md  session-summary.md  task-completion-summary.md  test-fixes-final-summary.md
auth9-core/.claude/skills/: ops.md  reset-local-env.md
auth9-core/migrations/: 20240101000001_create_tenants.sql  20240101000002_create_users.sql  20240101000003_create_tenant_users.sql  20240101000004_create_services.sql  20240101000005_create_permissions.sql  20240101000006_create_roles.sql  20240101000007_create_role_permissions.sql  20240101000008_create_user_tenant_roles.sql  20240101000009_create_audit_logs.sql  20260129000001_separate_clients_from_services.sql  20260201000001_create_system_settings.sql  20260201000002_create_invitations.sql  20260202000001_create_password_reset_tokens.sql  20260202000002_add_password_policy_to_tenants.sql  20260202000003_create_sessions.sql  20260202000004_create_linked_identities.sql  20260202000005_create_login_events.sql  20260202000006_create_webhooks.sql  20260202000007_create_security_alerts.sql  20260202000008_add_services_name_unique.sql  20260202000008_create_tenant_services.sql  20260208000001_create_webauthn_credentials.sql  20260213000001_create_actions.sql  20260214000001_add_password_tracking_fields.sql  20260215000001_remove_email_unique_constraint.sql  20260216000001_normalize_uuid_format.sql  20260217000001_create_enterprise_sso.sql  20260218000001_add_tenant_domain.sql  20260220000001_create_abac_policy_tables.sql  20260221000001_move_branding_actions_to_service.sql  20260222000001_create_scim_tokens.sql  20260222000002_create_scim_group_mappings.sql  20260222000003_create_scim_provisioning_logs.sql  20260313000001_create_malicious_ip_blacklist.sql  20260316000001_create_saml_applications.sql  20260317000002_add_neutral_identity_columns.sql  20260318000001_oidc_create_credentials.sql  20260318000002_oidc_create_user_verification_status.sql  20260318000003_oidc_create_pending_actions.sql  20260318000004_oidc_create_email_verification_tokens.sql  (+11 more)
auth9-core/proto/: auth9.proto
auth9-core/src/: lib.rs  main.rs  openapi.rs  state.rs
auth9-core/src/api/: action.rs  analytics.rs  audit.rs  auth.rs  branding.rs  email_template.rs  health.rs  identity_provider.rs  invitation.rs  keycloak_event.rs  metrics.rs  mod.rs  password.rs  role.rs  security_alert.rs  service.rs  session.rs  system_settings.rs  tenant.rs  tenant_service.rs  user.rs  webauthn.rs  webhook.rs
auth9-core/src/cache/: manager.rs  manager_ops.rs  mod.rs  noop.rs  noop_ops.rs  tests.rs
auth9-core/src/config/: mod.rs
auth9-core/src/crypto/: aes.rs  mod.rs
auth9-core/src/domain/: abac.rs  action.rs  analytics.rs  branding.rs  common.rs  email.rs  email_template.rs  enterprise_sso.rs  identity_provider.rs  invitation.rs  linked_identity.rs  mod.rs  password.rs  rbac.rs  scim.rs  service.rs  session.rs  system_settings.rs  tenant.rs  user.rs  webauthn.rs
auth9-core/src/domains/: mod.rs
auth9-core/src/email/: mod.rs  provider.rs  ses.rs  smtp.rs
auth9-core/src/error/: mod.rs
auth9-core/src/grpc/: mod.rs  token_exchange.rs
auth9-core/src/http_support/: mod.rs
auth9-core/src/identity_engine/: mod.rs  types.rs
auth9-core/src/jwt/: claims.rs  mod.rs
auth9-core/src/keycloak/: client.rs  mod.rs  seeder.rs  types.rs
auth9-core/src/middleware/: auth.rs  captcha.rs  client_ip.rs  error_response.rs  metrics.rs  mod.rs  path_guard.rs  rate_limit.rs  require_auth.rs  scim_auth.rs  security_headers.rs  trace.rs
auth9-core/src/migration/: mod.rs
auth9-core/src/models/: action.rs  analytics.rs  branding.rs  email.rs  enterprise_sso.rs  identity_provider.rs  ldap.rs  linked_identity.rs  mod.rs  password.rs  rbac.rs  saml_application.rs  service.rs  session.rs  social_provider.rs  system_settings.rs  user.rs  webauthn.rs
auth9-core/src/policy/: abac.rs  mod.rs
auth9-core/src/repository/: abac.rs  action.rs  audit.rs  invitation.rs  ldap_group_mapping.rs  linked_identity.rs  login_event.rs  malicious_ip_blacklist.rs  mod.rs  password_reset.rs  rbac.rs  saml_application.rs  scim_group_mapping.rs  scim_log.rs  scim_token.rs  security_alert.rs  service.rs  service_branding.rs  session.rs  social_provider.rs  system_settings.rs  tenant.rs  tenant_service.rs  user.rs  webauthn.rs  webhook.rs
auth9-core/src/server/: mod.rs
auth9-core/src/service/: action.rs  client.rs  (+19 more)
auth9-core/tests/: api_test.rs  audit_api_test.rs  audit_test.rs  auth_api_test.rs  backend_switch_smoke_test.rs  grpc_token_exchange_test.rs  health_api_test.rs  keycloak_adapter_contract_test.rs  keycloak_integration_test.rs  keycloak_unit_test.rs  rbac_test.rs  role_api_test.rs  service_api_test.rs  service_test.rs  tenant_api_test.rs  tenant_test.rs  test_update_user_mfa.rs  user_api_test.rs  user_test.rs
auth9-oidc/: .env.example  Cargo.toml  Dockerfile
auth9-oidc/migrations/: 20260318000001_create_credentials.sql  20260318000002_create_user_verification_status.sql  20260318000003_create_pending_actions.sql
auth9-oidc/src/: config.rs  db.rs  error.rs  health.rs  identity_engine.rs  lib.rs  main.rs  server.rs
(+1361 files in other folders)
