[package]
name = "auth9-core"
version = "0.1.0"
edition = "2021"
authors = ["Auth9 Team"]
description = "Identity Service Backend - The Brain of Auth9"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.11"
prost = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# JWT
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP Client (for Keycloak)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
lazy_static = "1.4"
regex = "1"
url = "2"
rsa = { version = "0.9", features = ["pem"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["mysql", "redis"] }
wiremock = "0.6"
fake = { version = "2", features = ["derive"] }
rstest = "0.18"
pretty_assertions = "1"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "auth9-core"
path = "src/main.rs"
