[package]
name = "auth9-core"
version = "0.1.0"
edition = "2021"
authors = ["Auth9 Team"]
description = "Identity Service Backend - The Brain of Auth9"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = { version = "0.13", features = ["tls-ring"] }
tonic-reflection = "0.13"
prost = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "uuid", "chrono", "json"] }

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# JWT
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# OpenTelemetry
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"

# HTTP Client (for Keycloak)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4", features = ["derive"] }

# OpenAPI Documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-redoc = { version = "6", features = ["axum"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
dotenvy = "0.15"
validator = { version = "0.20", features = ["derive"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
lazy_static = "1.4"
regex = "1"
url = "2"
rsa = { version = "0.9", features = ["pem"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
urlencoding = "2"

# WebAuthn
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
webauthn-rs-proto = "0.5"

# AWS SDK for SES
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1.60"

# Action Engine (V8 Runtime)
deno_core = "0.330"
deno_error = "0.5"
serde_v8 = "0.240"
lru = "0.16"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"
rstest = "0.23"
pretty_assertions = "1"

[build-dependencies]
tonic-build = "0.13"

[[bin]]
name = "auth9-core"
path = "src/main.rs"
